--- a/topicsViz/pom.xml
+++ b/topicsViz/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>stanford-corenlp</artifactId>
 			<version>3.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.4.1</version>
+			<classifier>models</classifier>
+		</dependency>
 		
 		
 		<!-- https://mvnrepository.com/artifact/org.glassfish/javax.el -->
